--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -606,7 +606,7 @@ ul#previewTabs {
     -o-transform-origin: 0 0;
     -webkit-transform-origin: 0 0;
     width: 100%;
-    height: 100%;   
+    height: 100%;
 }
 
 .previewBox iframe {
@@ -701,7 +701,7 @@ span.id {
 }
 
 .group .user, .folder .file, .folder .folder {
-    margin: 4px 0 4px 11px;    
+    margin: 4px 0 4px 11px;
 }
 
 .image {
@@ -987,7 +987,7 @@ button img {
 #tempErrorBox .al {
     vertical-align: middle;
     margin-left: 4px;
-    margin-top: -4px;    
+    margin-top: -4px;
 }
 
 #dialogBox {
@@ -1261,7 +1261,7 @@ button.enabled, button.active {
 }
 
 .callToAction {
-    background-color: #81ce25;  
+    background-color: #81ce25;
     background: -webkit-gradient(linear, left bottom, left top, from(#73b821), to(#90e629)) no-repeat;
     background: -moz-linear-gradient(90deg, #73b821, #90e629) no-repeat;
     filter: progid:DXImageTransform.Microsoft.Gradient(StartColorStr='#90e629', EndColorStr='#73b821', GradientType=0);
@@ -1405,9 +1405,11 @@ button.add_property {
 }
 
 .schema {
-    width: 600px;
+    width: 220px;
     /*height: 200px;*/
     padding-bottom: 6px ! important;
+    padding-top: 5px ! important;
+    text-align: center;
 }
 
 .schema-input-container {
@@ -1420,10 +1422,11 @@ button.add_property {
 }
 
 .schema-props {
-    background-color: #f9f9f9;
     width: 100%;
     font-size: .9em;
     border-collapse: collapse;
+    padding: 0 4px;
+    text-align: left;
 }
 
 .schema-props th, .schema-props td {
@@ -1437,6 +1440,19 @@ button.add_property {
 
 .schema-props tr:nth-child(even) {
     background-color: #fff;
+}
+
+.schema-actions {
+    width: 100%;
+    font-size: .9em;
+    border-collapse: collapse;
+    padding: 0 4px;
+    text-align: left;
+}
+
+.schema-actions img.configure {
+    position: absolute;
+    right: 6px;
 }
 
 #schema-graph .label {
@@ -1457,33 +1473,46 @@ button.add_property {
     margin: 6px 0;
 }
 
-.property-name, .property-dbname, .property-type, .property-format, .default, #relationship-label {
+.action-name, .action-function, .property-name, .property-dbname, .property-type, .property-format, .default, #relationship-label {
     border: none;
     background: transparent;
     font-size: 1em;
+}
+
+.schema span {
+    display: inline-block;
 }
 
 .schema b {
     font-size: 1.5em;
     display: inline-block;
     margin: 2px 0;
+    text-align: center;
+}
+
+.schema span {
+    display: inline-block;
+    margin: 2px 0;
+    text-align: center;
 }
 
 .schema b:hover,
+.schema span:hover,
+.schema .action-name:hover,
+.schema .action-function:hover,
+.schema .property-type:hover,
 .schema .property-name:hover,
 .schema .property-dbname:hover,
+.schema .property-format:hover,
+.schema .default:hover,
 .schema .related:hover {
     cursor: text;
     box-shadow: 2px 0 #000;
     color: #222;
     background-color: #ffe;
-    padding: 1px;
     -webkit-box-shadow: 0 0 5px yellow;
     -moz-box-shadow: 0 0 5px #888;
     box-shadow: 0 0 5px #888;
-}
-.schema b:hover {
-    margin: 1px 0 1px -1px;
 }
 
 .schema .related:hover {
@@ -1493,6 +1522,13 @@ button.add_property {
 .schema .new-name {
     font-size: 1.3em;
     margin: 0;
+    text-align: center;
+}
+
+.schema .new-superclass {
+    font-size: 1.3em;
+    margin: 0;
+    text-align: center;
 }
 
 .schema .icon {
@@ -1500,6 +1536,36 @@ button.add_property {
     right: 6px;
     top: 6px;
     cursor: pointer;
+}
+
+.schema img.configure {
+    cursor: pointer;
+    margin-left: 1em;
+    vertical-align: middle;
+}
+
+.schema div.configure {
+    position: relative;
+}
+
+.schema table.configure {
+    z-index: 2001;
+    position: absolute;
+    left:220px;
+    top:-20px;
+    width: 280px;
+    background-color: #fff;
+    border: 1px solid #999;
+    border-radius: 5px;
+}
+
+.schema table.configure .title {
+    width: 30%;
+    font-weight: bold;
+}
+
+.schema .options {
+    display: none;
 }
 
 #admin-tools {
